log
Wed, Mar 26, 2025  8:49:19 AM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:53:20 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
eaab063
Wed, Mar 26, 2025  9:03:18 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
6ac9530
Wed, Mar 26, 2025  9:08:31 AM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
d04e140
Wed, Mar 26, 2025  9:11:08 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
9ef6137
Wed, Mar 26, 2025  9:11:49 AM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b6f9fa3
Wed, Mar 26, 2025  9:12:19 AM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
170a4dd
Wed, Mar 26, 2025  9:14:04 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
08a3d39
Wed, Mar 26, 2025  9:15:44 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
3c061ee
Wed, Mar 26, 2025  9:16:11 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
0956337
Wed, Mar 26, 2025  9:18:02 AM: 
 list.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|0
908ef05
Wed, Mar 26, 2025  9:19:07 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
067d8eb
Wed, Mar 26, 2025  9:20:25 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
04d7bcd
Wed, Mar 26, 2025  9:25:43 AM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
079ba35
Wed, Mar 26, 2025  9:30:27 AM: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f2922ae
Wed, Mar 26, 2025  9:32:26 AM: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  1|5
total_score: 10/70
2ea2289
Wed, Mar 26, 2025  9:34:27 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
6e1073c
Wed, Mar 26, 2025  9:42:30 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
25c2950
Wed, Mar 26, 2025  9:44:00 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e059db7
Sat, Mar 29, 2025  9:44:14 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:53:37: error: expected ',' or ';' before ':' token
   53 |     void *data = list->current->data:
      |                                     ^
Compilation failed
67ecce2
Sat, Mar 29, 2025  9:47:19 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
7a98abb
Sat, Mar 29, 2025  9:51:04 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4dd0db0
Sat, Mar 29, 2025  9:52:48 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
ef43f3c
Sat, Mar 29, 2025  9:57:08 PM: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'prevList':
list.c:72:18: error: 'List' {aka 'struct List'} has no member named 'curret'; did you mean 'current'?
   72 |     return list->curret->data;
      |                  ^~~~~~
      |                  current
list.c:73:1: error: control reaches end of non-void function [-Werror=return-type]
   73 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
4a28b45
Sat, Mar 29, 2025 10:07:29 PM: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
657f6a1
